# bayesian-healthcare-marketplace

./: .gitignore  COACHING.md  PAIR_PROGRAMMING_PLAN.md  PROGRESS.md  README.md  pyproject.toml
src/bma_alpha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bma_alpha/api/: dependencies.py  main.py
src/bma_alpha/api/routes/: ingest.py
src/bma_alpha/core/: money.py
src/bma_alpha/domain/: EventIngest.py
src/bma_alpha/infra/: database.py
src/bma_alpha/services/: ingest.py
tests/: conftest.py
tests/unit/: test_event_ingest.py  test_ingest_service.py  test_money.py
